--- a/app/components/nav/nav.edit_cluster.html
+++ b/app/components/nav/nav.edit_cluster.html
@@ -3,7 +3,7 @@
     <div class="modal-header">
         <h4 class="modal-title" ng-show="!edit.update">Add an Industry in {{edit.location.profile.name}}</h4>
         <h4 class="modal-title" ng-show="edit.update">Update {{edit.community.name}} in {{edit.location.profile.name}}</h4>
-        <p class="font-bold">An industry cluster is an entrepreneurial ecosystem in support of a specific industry. Industries are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people within the community and foster the creation of new business.</p>
+        <p class="font-bold">An industry cluster is an entrepreneurial ecosystem in support of a market vertical.</p>
     </div>
     <div class="modal-body">
         <form name="edit.form">
