--- a/app/less/various.less
+++ b/app/less/various.less
@@ -46,12 +46,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .fa-rotate-45 {-webkit-transform:rotate(45deg); -moz-transform:rotate(45deg); -ms-transform:rotate(45deg); -o-transform:rotate(45deg); transform:rotate(45deg);}
 
-//for xeditable
-
-.summary_form .editable-buttons {
-  display: block;
-}
-
 // for user profile hero page
 
 .question-content {
@@ -1684,6 +1678,6 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 }
 
 /* Fix for xeditable and chekcbox plugin in angularJS version */
-.x-edit-checkbox .checkbox label::before {
+.checkbox label::before {
   display: none;
 }
