--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -6,7 +6,7 @@
             <div class="col-xs-12">
                 <h4 class="modal-title">Add a {{ add.is_resource ? 'resource' : 'company' }} to {{add.location.profile.name.split(',').slice(0, (add.location.profile.name.split(',').length - 1) || 1).join()}}</h4>
                 <p class="font-bold">{{ add.is_resource ?
-                    'Resources include coworking spaces, accelerators, investment funds, networking events, and other organizations that support entrepreneurship.' :
+                    'Resources are coworking spaces, accelerators, investment funds, networking events, and other organizations that support entrepreneurship.' :
                     'Only add companies that are part of your local startup community.' }} </p>
             </div>
         </div>
