--- a/app/components/welcome/welcome.profile.html
+++ b/app/components/welcome/welcome.profile.html
@@ -20,9 +20,9 @@
         </div>
         <div>
             <h4 style="line-height:1.75;">
-                Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>,<br/>
-                your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a><br/>
-                and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline || 'empty'}}</a>.
+                Your name is <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="welcome.user.profile.name" />,<br/>
+                your email address is <input type="email" style="border: 1px solid #eee;" class="input-sm" ng-model="welcome.user.profile.email" /><br/>
+                and your headline will be: <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="welcome.user.profile.headline" />.
                 <br/><br/>
                 Select an industry you most closely associate with:
                 <select class="form-control m-b" ng-model="welcome.selectedParent" style="margin-bottom: 5px;" required>
@@ -33,14 +33,21 @@
                 </div>
                 <br/>
                 Click below to edit your summary.
-                <br>
-                <span style="font-size: 13px;">Focus on the first sentence. It will be used on your profile page.</span>
             </h4>
         </div>
         <div class="summary_form">
-            <a editable-textarea="welcome.user.profile.summary" e-rows="12" e-cols="60">
-                <pre style="background: none; font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; text-align: left;">{{welcome.user.profile.summary || 'Nothing here!'}}</pre>
-            </a>
+            <div summernote class="summernote" ng-model="welcome.user.profile.summary" ng-model-options="{ debounce: 250, blur: 0 }" style="min-height: 34px;" config="{
+                                height: 50,
+    toolbar: [
+            ['edit',['undo','redo']],
+            ['headline', ['style']],
+            ['style', ['bold', 'italic', 'underline', 'clear']],
+            ['textsize', ['fontsize']],
+            ['alignment', ['ul', 'ol', 'paragraph', ]],
+            ['view', ['fullscreen']],
+            ['insert', ['link','hr']]
+        ]
+  }">{{welcome.user.profile.summary || 'Nothing here!'}}</div>
         </div>
 
 
