--- a/app/components/search/search.dashboard.html
+++ b/app/components/search/search.dashboard.html
@@ -1,23 +1,9 @@
 <div>
-    <div class="hpanel">
-        <uib-tabset>
-            <uib-tab>
-                <uib-tab-heading>
-                    People
-                </uib-tab-heading>
-                <div class="panel-body" style="padding: 25px;">
-                    <div ui-view="people"></div>
-                </div>
-            </uib-tab>
-            <uib-tab>
-                <uib-tab-heading>
-                    Companies
-                </uib-tab-heading>
-                <div class="panel-body" style="padding: 25px;">
-                    <div ui-view="companies"></div>
-                </div>
-            </uib-tab>
-        </uib-tabset>
+    <div class="panel-body col-md-12 col-lg-6">
+        <div ui-view="people"></div>
+    </div>
+    <div class="panel-body col-md-12 col-lg-6">
+        <div ui-view="companies"></div>
     </div>
 </div>
 
