--- a/app/components/users/user.dashboard.profile.html
+++ b/app/components/users/user.dashboard.profile.html
@@ -1,59 +1,4 @@
-<div class="row">
-    <div class="col-sm-12">
-        <div style="padding-bottom: 20px;">
-            <div>
-                <div class="pull-right">
-                    <a href="{{::profile.user.profile.avatar}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
-                    </a>
-                </div>
-            </div>
-            <h3 style="padding-left: 4px;">{{::profile.user.profile.name | words:0}} {{::profile.user.profile.name |
-                words:1}} {{::profile.user.profile.name | words:2}}
-            </h3>
-            <h4>
-                {{::profile.user.profile.headline}}
-            </h4>
-        </div>
-
-        <div class="row" style="float: left;">
-            <div class="no-overflow profile-div" ng-if="profile.user.roles.leader">
-                <ul class="profile-ul">
-                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Leader:</p>
-                    <li ng-repeat="(key, val) in profile.user.roles.leader" class="profile-roles">
-                        <a ui-sref="community.dashboard({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="no-overflow profile-div" ng-if="profile.user.roles.founder">
-                <ul class="profile-ul">
-                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Founder:</p>
-                    <li ng-repeat="(key, val) in profile.user.roles.founder" class="profile-roles">
-                        <a ui-sref="{{'community.dashboard.' + global.communities[key].type + '({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})'}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="no-overflow profile-div" ng-if="profile.user.roles.investor">
-                <ul class="profile-ul">
-                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Investor:</p>
-                    <li ng-repeat="(key, val) in profile.user.roles.investor" class="profile-roles">
-                        <a ui-sref="community.dashboard({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div ng-if="profile.user.roles.mentor">
-                <ul class="profile-ul">
-                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Mentor:</p>
-                    <li ng-repeat="(key, val) in profile.user.roles.mentor" class="profile-roles">
-                        <a ui-sref="community.dashboard({location_path: key, community: global.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[key].type == 'company', 'btn-info' : global.communities[key].resource, 'btn-primary' : global.communities[key].type == 'cluster', 'btn-success' : global.communities[key].type == 'location'}"><i class="fa {{global.communities[key].profile.icon}}"></i> {{global.communities[key].profile.name}}</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<div ng-show="profile.user.profile.linkedin.summary" class="panel-footer" style="margin-top:10px;">
+<div ng-show="profile.user.profile.linkedin.summary" style="margin-top:10px;">
     <h3>Summary</h3>
     <p style="white-space:pre-wrap;" ng-bind-html="::profile.user.profile.linkedin.summary | linky:'_blank'"></p>
     <hr>
