--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -63,7 +63,7 @@
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Communities:</p>
             <li ng-repeat="community in profile.company.communities" class="profile-roles">
-                <a ui-sref="community.dashboard({location_path: community, community: global.communities[community], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.communities[community].type == 'company', 'btn-info' : global.communities[community].resource, 'btn-primary' : global.communities[community].type == 'cluster', 'btn-success' : global.communities[community].type == 'location'}"><i class="fa {{global.communities[community].profile.icon}}"></i> {{global.communities[community].profile.name}}</a>
+                <a ui-sref="community.dashboard({location_path: community, community: global.community[community], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.community[community].type == 'company', 'btn-info' : global.community[community].resource, 'btn-primary' : global.community[community].type == 'cluster', 'btn-success' : global.community[community].type == 'location'}"><i class="fa {{global.community[community].profile.icon}}"></i> {{global.community[community].profile.name}}</a>
             </li>
         </ul>
     </div>
