--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -4,11 +4,8 @@
         <div class="grey-line">
         </div>
         <div id="logo" class="light-version" style="transition: all 0.4s ease 0s;">
-            <a ui-sref="community.dashboard({location_path: global.location.key, community: global.location, query: '*', top: global.nav_top, communities: global.communities, user: nav.user})">
-                <img ng-if="::global.community.profile && global.community.profile.sc_logo" ng-src="{{::global.community.profile.sc_logo}}"/>
-                <img ng-if="::!(global.community.profile && global.community.profile.sc_logo) && (global.location.profile && global.location.profile.sc_logo)" ng-src="{{::global.location.profile.sc_logo}}"/>
-                <img ng-if="::!(global.community.profile && global.community.profile.sc_logo) && !(global.location.profile && global.location.profile.sc_logo)" src="/public/images/sc_logo.png" style="padding: 9px 20px 6px 18px;"/>
-
+            <a ui-sref="community.dashboard({location_path: global.location.key, community: global.location, query: '*', top: global.nav_top, communities: global.community, user: nav.user})">
+                <img ng-src="{{global.community.profile.sc_logo || global.location.profile.sc_logo || '/public/images/sc_logo_small.png' }}"/>
             </a>
         </div>
         <nav role="navigation">
@@ -35,7 +32,7 @@
                 <div class="collapse mobile-navbar" id="mobile-collapse">
                     <ul class="nav navbar-nav">
                         <li ng-if="nav.user">
-                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}, communities: global.communities, user: nav.user })">Your Profile</a>
+                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}, communities: global.community, user: nav.user })">Your Profile</a>
                         </li>
                         <li ng-if="!nav.user">
                             <div style="margin: 20px 0 0 20px;">
@@ -68,13 +65,13 @@
                     <li ng-if="nav.user" class="dropdown" style="padding-top: 10px; padding-left: 10px;" tour-step order="4" title="Your Profile" content="People can ask you questions on your profile page. Click 'End tour' to take a look." placement="bottom">
                         <div class="pull-left" style="padding-top: 1px; white-space: nowrap;     text-align: right; padding-right: 20px;">
                             <span loading-bars ng-if="p_working" style="padding-right:40px;"></span>
-                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}, communities: global.communities, user: nav.user })" ng-click="p_working = true">{{::nav.user.profile.name}}</a>
+                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}, communities: global.community, user: nav.user })" ng-click="p_working = true">{{::nav.user.profile.name}}</a>
                             <div style="margin-left: -10px; padding-top: 1px;">
                                 <span ng-repeat="(item, val) in ::nav.user.roles" class="user-role" ><i ng-attr-title="{{::item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></span>
                             </div>
                         </div>
                         <div class="pull-right" style="padding-right: 10px;">
-                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}, communities: global.communities, user: nav.user })" ng-click="p_working = true"><img title="Your Profile" class="img-circle m-b" ng-src="{{::nav.user.profile.avatar || '/public/images/blank_avatar.png'}}" alt="{{::nav.user.profile.name}}" style="height: 40px; width: 40px; " onerror="this.src='/public/images/blank_avatar.png'"/></a>
+                            <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}, communities: global.community, user: nav.user })" ng-click="p_working = true"><img title="Your Profile" class="img-circle m-b" ng-src="{{::nav.user.profile.avatar || '/public/images/blank_avatar.png'}}" alt="{{::nav.user.profile.name}}" style="height: 40px; width: 40px; " onerror="this.src='/public/images/blank_avatar.png'"/></a>
                         </div>
                     </li>
                     <li ng-if="!nav.user" class="dropdown">
@@ -125,9 +122,9 @@
             <li class="active">
                 <ul class="nav nav-second-level">
                     <li>
-                        <a ui-sref="community.dashboard({location_path: global.location.key, community_path: '', community: global.location, location: global.location, query: '*', top: global.nav_top, communities: global.communities, user: nav.user })" style="padding-left: 6px; font-size: 16px; font-weight: bold; border-bottom: 1px solid #eee; background-color:#F6F8F9; border-left: 2px solid #82BC4B;" ng-click="l_working = true">
-                            <span ng-if="::global.location" style="white-space:nowrap;font-size:18px;">
-                                &nbsp;{{::global.location.profile.name}}
+                        <a ui-sref="community.dashboard({location_path: global.location.key, community_path: '', community: global.location, location: global.location, query: '*', top: global.nav_top, communities: global.community, user: nav.user })" style="padding-left: 6px; font-size: 16px; font-weight: bold; border-bottom: 1px solid #eee; background-color:#F6F8F9; border-left: 2px solid #82BC4B;" ng-click="l_working = true">
+                            <span style="white-space:nowrap;font-size:18px;">
+                                &nbsp;{{global.location.profile.name}}
                             </span>
                             <span loading-bars ng-if="l_working"></span>
                         </a>
@@ -135,7 +132,7 @@
                 </ul>
             </li>
 
-            <li class="active" ng-show="::global.locations">
+            <li class="active" ng-show="global.locations">
                 <a style="cursor:default;"><span>
 
                     Locations
@@ -146,8 +143,8 @@
                     <li ng-if="::!global.locations || global.locations === {}">
                         <a>No locations yet</a>
                     </li>
-                    <li ng-repeat="item in ::global.locations">
-                        <a ui-sref="community.dashboard({location_path: item.key, community_path: '', community: item, location: item, query: '*', top: global.nav_top, communities: global.communities, user: nav.user})" ng-class="{active: global.path.includes('/' + item.key)}" ng-click="li_working = true"><i class="fa fa-globe"></i>
+                    <li ng-repeat="item in global.locations">
+                        <a ui-sref="community.dashboard({location_path: item.key, community_path: '', community: item, location: item, query: '*', top: global.nav_top, communities: global.community, user: nav.user})" ng-class="{active: global.path.includes('/' + item.key)}" ng-click="li_working = true"><i class="fa fa-globe"></i>
                             {{::item.profile.name}}
                             <span loading-bars ng-show="li_working"></span>
                         </a>
@@ -155,7 +152,7 @@
                 </ul>
             </li>
 
-            <li class="active" ng-show="::global.nav_top.parents" tour-step order="3" title="Industry Clusters" content="A cluster is an entrepreneurial ecosystem in support of a specific industry.<br><br>Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people and foster creation of new startups." placement="right">
+            <li class="active" ng-show="global.nav_top.parents" tour-step order="3" title="Industry Clusters" content="A cluster is an entrepreneurial ecosystem in support of a specific industry.<br><br>Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people and foster creation of new startups." placement="right">
                 <a style="cursor:default; margin-left: -7px;"><span>
 
                     Industries
@@ -163,13 +160,13 @@
                 </span>
                 </a>
                 <ul class="nav nav-second-level">
-                    <li ng-repeat="item in ::global.nav_top.parents | orderBy: 'item.value' : reverse">
-                        <a ui-sref="community.dashboard({community_path: item.label, community: global.nav_communities[item.label], query: '*', location_path: (global.location.key || nav.user.profile.home), top: global.nav_top, communities: global.communities, user: nav.user})" ng-class="{active: global.path.includes('/' + item.label)}" ng-click="cl_working = true">
+                    <li ng-repeat="item in global.nav_top.parents | orderBy: 'item.value' : reverse">
+                        <a ui-sref="community.dashboard({community_path: item.label, query: '*', location_path: (global.location.key || nav.user.profile.home), user: nav.user})" ng-class="{active: global.path.includes('/' + item.label)}" ng-click="cl_working = true">
                             <span>
                                 <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
                                 {{::item.label[0].toUpperCase() + item.label.slice(1)}}
                                 <span loading-bars ng-show="cl_working"></span>
-                                <a ng-repeat="c in ::nav.clusters[item.label]" ui-sref="community.dashboard({community_path: c.key, community: global.nav_communities[c.key], query: '*', location_path: (global.location.key || nav.user.profile.home), top: global.nav_top, communities: global.communities, user: nav.user })" ng-class="{active: global.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:30px;">
+                                <a ng-repeat="c in ::nav.clusters[item.label]" ui-sref="community.dashboard({community_path: c.key, query: '*', location_path: (global.location.key || nav.user.profile.home),user: nav.user })" ng-class="{active: global.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:30px;">
                                     <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
                                     {{::c.community_profiles[global.location.key].name[0].toUpperCase() + c.community_profiles[global.location.key].name.slice(1);}}
                                     <span loading-bars ng-show="clc_working"></span>
