--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -26,17 +26,17 @@
                     </div>
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
-                    <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
+                    <li ng-if="global.user.communities.indexOf(global.user.profile.home) > -1">
                         <button class="btn btn-success" ui-sref="resource.add" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Resource</button>
                     </li>
                 </ul>
             </div>
 
-            <a ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" class="btn btn-info pull-right" ui-sref="newsletter" style="margin-top:15px; width: 100%;">Create / Edit Email Newsletters</a>
+            <a ng-if="global.user.communities.indexOf(global.user.profile.home) > -1 && global.user.newsletter" class="btn btn-info pull-right" ui-sref="newsletter" style="margin-top:15px; width: 100%;">Create / Edit Email Newsletters</a>
 
-            <button ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" ladda="nav.syncworking" class="ladda-button btn btn-warning pull-right" data-style="zoom-in" data-spinner-size="25" ng-click="nav.syncNewsletter()" style="margin-top:15px; width: 100%;" title="This will synchronize your resource networks with your newsletter lists. This is only needed if names are missing from your lists.">Sync Newsletter Lists</button>
+            <button ng-if="global.user.communities.indexOf(global.user.profile.home) > -1 && global.user.newsletter" ladda="nav.syncworking" class="ladda-button btn btn-warning pull-right" data-style="zoom-in" data-spinner-size="25" ng-click="nav.syncNewsletter()" style="margin-top:15px; width: 100%;" title="This will synchronize your resource networks with your newsletter lists. This is only needed if names are missing from your lists.">Sync Newsletter Lists</button>
 
-            <button ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1" class="btn btn-danger pull-right" ng-click="nav.setupNewsletter()" style="margin-top:15px; width: 100%;">Setup Email Newsletter</button>
+            <button ng-if="global.user.communities.indexOf(global.user.profile.home) > -1" class="btn btn-danger pull-right" ng-click="nav.setupNewsletter()" style="margin-top:15px; width: 100%;">Setup Email Newsletter</button>
 
         </div>
 
@@ -48,14 +48,14 @@
                     <small>An industry cluster is an entrepreneurial ecosystem in support of a market vertical.</small>
                 </div>
                 <hr>
-                <div ng-repeat="(k, v) in nav.user.roles.leader">
-                    <div ng-if="$rootScope.global.community[k].type == 'cluster'" style="padding-bottom:10px; font-size: 18px;">{{ $rootScope.global.community[k].community_profiles[nav.user.profile.home].name }}
+                <div ng-repeat="(k, v) in global.user.roles.leader">
+                    <div ng-if="$rootScope.global.community[k].type == 'cluster'" style="padding-bottom:10px; font-size: 18px;">{{ $rootScope.global.community[k].community_profiles[global.user.profile.home].name }}
                         <button ng-click="nav.embedSettings($rootScope.global.community[k]);" class="btn btn-xs pull-right">Embed</button>
                         <button ng-click="nav.editCommunity($rootScope.global.community[k]);" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
                     </div>
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
-                    <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
+                    <li ng-if="global.user.communities.indexOf(global.user.profile.home) > -1">
                         <button class="btn btn-success" ng-click="nav.editCommunity({type:'cluster'});" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Industry</button>
                     </li>
                 </ul>
@@ -69,11 +69,11 @@
                     <small>Locations are cities, counties, regions, or states.</small>
                 </div>
                 <hr>
-                <div ng-if="$rootScope.global.community[nav.user.profile.home]" style="padding-bottom:10px; font-size: 18px;">{{ $rootScope.global.community[nav.user.profile.home].profile.name }}
-                    <button ng-click="nav.embedSettings($rootScope.global.community[nav.user.profile.home]);" class="btn btn-xs pull-right">Embed</button>
+                <div ng-if="$rootScope.global.community[global.user.profile.home]" style="padding-bottom:10px; font-size: 18px;">{{ $rootScope.global.community[global.user.profile.home].profile.name }}
+                    <button ng-click="nav.embedSettings($rootScope.global.community[global.user.profile.home]);" class="btn btn-xs pull-right">Embed</button>
                 </div>
-                <div ng-repeat="(k, v) in nav.user.roles.leader">
-                    <div ng-if="$rootScope.global.community[k].type == 'location' && k !== nav.user.profile.home" style="padding-bottom:10px; font-size: 18px;">{{ $rootScope.global.community[k].profile.name }}
+                <div ng-repeat="(k, v) in global.user.roles.leader">
+                    <div ng-if="$rootScope.global.community[k].type == 'location' && k !== global.user.profile.home" style="padding-bottom:10px; font-size: 18px;">{{ $rootScope.global.community[k].profile.name }}
                         <button ng-click="nav.embedSettings($rootScope.global.community[k]);" class="btn btn-xs pull-right">Embed</button>
                     </div>
                 </div>
